<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.pawel.simplegallery.ui.profile.ProfileViewModel" />
    </data>

    <LinearLayout
        visibleOrGone="@{model.user != null}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileInfoFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@{model.user.username}"
            android:textSize="@dimen/text_headline"
            tools:text="Antonette" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:padding="@dimen/spacing_normal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/nameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.user.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Ervin Howell" />


                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/email"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/emailValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{model::sendEmail}"
                    android:text="@{model.user.email}"
                    android:textColor="@color/colorLink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/email"
                    tools:text="Shanna@melissa.tv" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/phone"
                    app:layout_constraintTop_toBottomOf="@id/email" />

                <TextView
                    android:id="@+id/phoneValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{model::phoneCall}"
                    android:text="@{model.user.phone}"
                    android:textColor="@color/colorLink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/phone"
                    tools:text="010-692-6593 x09125" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/website"
                    app:layout_constraintTop_toBottomOf="@id/phone" />

                <TextView
                    android:id="@+id/websiteValue"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{model::openWebsite}"
                    android:text="@{model.user.website}"
                    android:textColor="@color/colorLink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/website"
                    tools:text="anastasia.net" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/address"
                    app:layout_constraintTop_toBottomOf="@id/website" />

                <TextView
                    android:id="@+id/addressValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:onClick="@{model::openMap}"
                    android:text="@{model.address}"
                    android:textColor="@color/colorLink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/address"
                    tools:text="Douglas Extension\nSuite 847\n59590-4157\n McKenziehaven" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/company"
                    app:layout_constraintTop_toBottomOf="@id/addressValue" />

                <TextView
                    android:id="@+id/companyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@{model.user.company.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/company"
                    tools:text="Deckle-Christ" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>